--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Soy un profesional en inform&aacute;tica con 
 experiencia en diseño web y soporte técnico, apasionado
  por la innovación y la enseñanza.</p>
-<center><img src="DSCN7936.jpg" width="200" height="150">
+<center><img src="DSCN7936.JPG" width="200" height="150">
 <h2><a href="edu.html">Educaci&oacute;n</a><br></h2>
 <h2><a href="expelab.html">Experiencia laboral</a><br></h2>
 <h2><a href="habi.html">Habilidades</a><br></h2>
